# eta-compiler

./: .gitignore  Cargo.toml  README.md  etac-build  ethScript.results  overview.md  overview_pa3.html
eth/tests/: pa3.results
eth/tests/pa1/: break_loop.lexedsol  char_literal_cases.eta  char_literal_cases.lexedsol  char_literal_errors.eta  char_literal_errors.lexedsol  char_symbol.lexedsol  comments_and_eof.eta  comments_and_eof.lexedsol  ethScript  ex2.lexedsol  gcd.eta  gcd.lexedsol  id_keyword_boundaries.eta  id_keyword_boundaries.lexedsol  identifier_primes_and_underscores.eta  identifier_primes_and_underscores.lexedsol  integer_identifier_boundary.eta  integer_identifier_boundary.lexedsol  medley01.lexedsol  operator_maximal_munch.eta  operator_maximal_munch.lexedsol  (+7 more)
pa2_student/: VERSION.txt  eta.cup
pa2_student/doc/: allclasses-index.html  allpackages-index.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  search.html  type-search-index.js
src/: callbacks.rs  formatter.rs  io.rs  lexer.rs  lib.rs  main.rs  pretty.rs  pretty_tests.rs  sexp.rs  sexp_tests.rs  token.rs
src/checker/: check.rs  context.rs  context_tests.rs
src/cli/: cli.rs  formatter.rs  io.rs  mod.rs
src/ir/: expr.rs  ir_expr.rs  ir_op.rs  ir_pretty.rs  ir_stmt.rs  mod.rs  pretty.rs  stmt.rs  symbol.rs
src/lexer/: callbacks.rs  mod.rs  token.rs
src/parser/: adapter.rs  ast.rs  eta.lalrpop  eta.rs  mod.rs  pretty.rs  sexp.rs
src/tests/: pretty_tests.rs
src/typecheck/: error.rs  mod.rs
(+63 files in other folders)
