strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "etac"
path = "src/main.rs"

[dependencies]
logos = "=0.13.0"
regex = "1.12.3"
clap = { version = "=3.2.25", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[patch.crates-io]
textwrap = { version = "=0.15.2" }

